--- a/index.html
+++ b/index.html
@@ -1,114 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sawako Goshima Portfolio</title>
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <!-- font Awesome -->
-    <script src="https://kit.fontawesome.com/0ceddb3154.js" crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <header>
-      <nav>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sawako Goshima Portfolio</title>
+  <link rel="stylesheet" href="css/reset.css" />
+  <link rel="stylesheet" href="css/style.css" />
+  <!-- font Awesome -->
+  <script src="https://kit.fontawesome.com/0ceddb3154.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a class="navi" href="#">HOME</a></li>
+        <li><a class="navi" href="#about">ABOUT</a></li>
+        <li><a class="navi" href="#web-skills">SKILLS</a></li>
+        <li><a class="navi" href="#works">WORKS</a></li>
+        <li><a class="navi" href="#contact">CONTACT</a></li>
+      </ul>
+    </nav>
+
+    <div class="hamburger-menu">
+      <input type="checkbox" id="menu-btn-check">
+      <label for="menu-btn-check" class="menu-btn"><i class="fa fa-bars" id="show"></i></label>
+      <label for="menu-btn-check" class="menu-btn hide"><i class="fa fa-times" id="hide"></i></label>
+      <nav class="hamburger-navi">
         <ul>
-          <li><a class="navi" href="#">HOME</a></li>
-          <li><a class="navi" href="#about">ABOUT</a></li>
-          <li><a class="navi" href="#web-skills">SKILLS</a></li>
-          <li><a class="navi" href="#works">WORKS</a></li>
-          <li><a class="navi" href="#contact">CONTACT</a></li>
+          <li><a href="#">> HOME</a></li>
+          <li><a href="#about">> ABOUT</a></li>
+          <li><a href="#web-skills">> SKILLS</a></li>
+          <li><a href="#works">> WORKS</a></li>
+          <li><a href="#contact">> CONTACT</a></li>
         </ul>
       </nav>
+    </div>
 
-      <div class="hamburger-menu">
-        <input type="checkbox" id="menu-btn-check">
-        <label for="menu-btn-check" class="menu-btn"><i class="fa fa-bars" id="show"></i></label>
-        <label for="menu-btn-check" class="menu-btn hide"><i class="fa fa-times" id="hide"></i></label>
-        <nav class="hamburger-navi">
-          <ul>
-            <li><a href="#">> HOME</a></li>
-            <li><a href="#about">> ABOUT</a></li>
-            <li><a href="#web-skills">> SKILLS</a></li>
-            <li><a href="#works">> WORKS</a></li>
-            <li><a href="#contact">> CONTACT</a></li>
-          </ul>
-        </nav>
+  </header>
+  <main>
+    <section class="hero">
+      <h1>Sawako Goshima</h1>
+      <p>Front End Developer</p>
+    </section>
+    <section class="about">
+      <h2 id="about">About Me</h2>
+      <div class="about-container">
+        <img src="img/sawako.jpg" alt="a image of sawako" />
+        <p>I have been in Australia for nearly 10 years. Currently I am working as SPA therapist at 5star hotel SPA.
+          Before I came to Australia, I was a web director for some fashion EC sites. Therefore, I already knew this
+          industry how quickly growing and changing for giving significant benefits to our life. Also, I have been
+          investing my time to learn web cording for being a front end developer. Since I have started to study this, I
+          realised that my passion and future would be in this industry. My personality is a hard worker and perseverant
+          for focusing on reaching the goal. For that reason, I would like to work as a front end developer. <br />If
+          you give me an opportunity or some working experiences, I would love to contribute to the project with using
+          my skills such as web cording and a strong communication ability with the team member and clients which
+          improved as hospitality industry. <br />Thank you.</p>
       </div>
+    </section>
+    <section class="skills">
+      <h2 id="web-skills">Web Skills</h2>
+      <div class="skills-container">
+        <div>
+          <h3>HTML5/CSS3</h3>
+          <p class="skills-icon"><i class="far fa-file-code fa-3x"></i></p>
+          <p>I can do cording which is understandable and clearly. Further, I can create responsive web design for each
+            devices.</p>
+        </div>
+        <div>
+          <h3>JavaScript/jQuery</h3>
+          <p class="skills-icon"><i class="fab fa-js-square fa-3x"></i></p>
+          <p>I can do cording as event handling and animation for each by the type of website. Also I can touch to see
+            React.</p>
+        </div>
+        <div>
+          <h3>WordPress/PHP</h3>
+          <p class="skills-icon"><i class="fab fa-wordpress fa-3x"></i></p>
+          <p>I can create WordPress original theme. I have a knowledge about plugin and management.</p>
+        </div>
+      </div>
+    </section>
+    <section class="works">
+      <h2 id="works">Works</h2>
+      <ul class="works-container">
+        <li class="my-own-project">
+          <img src="img/ayakogoshima.jpeg" alt="an image of website AyakoGoshima" />
+          <button>
+            <a href="http://ayakogoshima.com/" target="_blank"><i class="fas fa-play"></i> Artist Website</a>
+          </button>
+        </li>
+        <li class="my-own-project">
+          <img src="img/travel_companion.png" alt="an image of website travel companion" />
+          <button>
+            <a href="https://sheltered-caverns-17258.herokuapp.com/" target="_blank"><i class="fas fa-play"></i> Travel
+              companion </a>
+          </button>
+        </li>
+      </ul>
+    </section>
+    <section class="contact">
+      <h2 id="contact">Contact</h2>
+      <form
+        action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSf_0wEi4uZahxSeMx-bAngKYmz0iM4Lik5nEYa5oNm3jMRDBw/formResponse"
+        method="post">
+        <input type="text" name="entry.2005620554" placeholder="Your Name" />
+        <input type="email" name="entry.1045781291" placeholder="Your Email" />
+        <input type="text" name="entry.583436142" placeholder="Subject" />
+        <textarea name="entry.839337160" rows="5" cols="30" placeholder="messages..."></textarea>
+        <button type="submit" name="submit" class="btn btn-info">Submit</button>
+      </form>
+    </section>
+  </main>
+  <footer>
+    <p>©2023/Sawako Goshima/All Right Reserved</p>
+  </footer>
+</body>
 
-    </header>
-    <main>
-      <section class="hero">
-        <h1>Sawako Goshima</h1>
-        <p>Front End Developer</p>
-      </section>
-      <section class="about">
-        <h2 id="about">About Me</h2>
-        <div class="about-container">
-          <img src="img/sawako.jpg" alt="a image of sawako" />
-          <p>I have been in Australia for nearly 10 years. Currently I am working as SPA therapist at 5star hotel SPA. Before I came to Australia, I was a web director for some fashion EC sites. Therefore, I already knew this industry how quickly growing and changing for giving significant benefits to our life. Also, I have been investing my time to learn web cording for being a front end developer. Since I have started to study this, I realised that my passion and future would be in this industry. My personality is a hard worker and perseverant for focusing on reaching the goal. For that reason, I would like to work as a front end developer. <br />If you give me an opportunity or some working experiences, I would love to contribute to the project with using my skills such as web cording and a strong communication ability with the team member and clients which improved as hospitality industry. <br />Thank you.</p>
-        </div>
-      </section>
-      <section class="skills">
-        <h2 id="web-skills">Web Skills</h2>
-        <div class="skills-container">
-          <div>
-            <h3>HTML5/CSS3</h3>
-            <p class="skills-icon"><i class="far fa-file-code fa-3x"></i></p>
-            <p>I can do cording which is understandable and clearly. Further, I can create responsive web design for each devices.</p>
-          </div>
-          <div>
-            <h3>JavaScript/jQuery</h3>
-            <p class="skills-icon"><i class="fab fa-js-square fa-3x"></i></p>
-            <p>I can do cording as event handling and animation for each by the type of website. Also I can touch to see React.</p>
-          </div>
-          <div>
-            <h3>WordPress/PHP</h3>
-            <p class="skills-icon"><i class="fab fa-wordpress fa-3x"></i></p>
-            <p>I can create WordPress original theme. I have a knowledge about plugin and management.</p>
-          </div>
-        </div>
-      </section>
-      <section class="works">
-        <h2 id="works">Works</h2>
-        <ul class="works-container">
-          <li class="my-own-project">
-            <img src="img/ayakogoshima.jpeg" alt="an image of website AyakoGoshima" />
-            <button>
-              <a href="http://ayakogoshima.com/" target="_blank"><i class="fas fa-play"></i> Artist Website</a>
-            </button>
-          </li>
-          <li>
-            <img src="img/airbnb.png" alt="an image of website airbnb" />
-          </li>
-          <li>
-            <img src="img/henmi.png" alt="an image of website henmi" />
-          </li>
-          <li>
-            <img src="img/isara.png" alt="an image of website isara" />
-          </li>
-          <li>
-            <img src="img/satudora.png" alt="an image of website satudora" />
-          </li>
-          <li>
-            <img src="img/tech.png" alt="an image of tech" />
-          </li>
-        </ul>
-      </section>
-      <section class="contact">
-        <h2 id="contact">Contact</h2>
-          <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSf_0wEi4uZahxSeMx-bAngKYmz0iM4Lik5nEYa5oNm3jMRDBw/formResponse" method="post">
-            <input type="text" name="entry.2005620554" placeholder="Your Name" />
-            <input type="email" name="entry.1045781291" placeholder="Your Email" />
-            <input type="text" name="entry.583436142" placeholder="Subject" />
-            <textarea name="entry.839337160" rows="5" cols="30" placeholder="messages..."></textarea>
-            <button type="submit" name="submit" class="btn btn-info">Submit</button>
-          </form>
-      </section>
-    </main>
-    <footer>
-        <p>©2023/Sawako Goshima/All Right Reserved</p>
-    </footer>
-  </body>
 </html>
