Updated css and html file

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" href="css/style.css" />
   <!-- font Awesome -->
   <script src="https://kit.fontawesome.com/0ceddb3154.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -49,38 +52,63 @@
       <h2 id="about">About Me</h2>
       <div class="about-container">
         <img src="img/sawako.jpg" alt="a image of sawako" />
-        <p>I have been in Australia for nearly 10 years. Currently I am working as SPA therapist at 5star hotel SPA.
-          Before I came to Australia, I was a web director for some fashion EC sites. Therefore, I already knew this
-          industry how quickly growing and changing for giving significant benefits to our life. Also, I have been
-          investing my time to learn web cording for being a front end developer. Since I have started to study this, I
-          realised that my passion and future would be in this industry. My personality is a hard worker and perseverant
-          for focusing on reaching the goal. For that reason, I would like to work as a front end developer. <br />If
-          you give me an opportunity or some working experiences, I would love to contribute to the project with using
-          my skills such as web cording and a strong communication ability with the team member and clients which
-          improved as hospitality industry. <br />Thank you.</p>
+        <p>With over 5 years of experience as an E-Commerce Contents Director in Tokyo, Japan, I have successfully
+          created compelling content that has stimulated consumer activity. During this time, I honed my skills in
+          crafting engaging and impactful digital experiences.<br />Currently, I am working as a freelanced web
+          developer to build up a web using WordPress (created the original theme using PHP). And also I am working as a
+          part-time Spa Therapist specializing in remedial massage at a prestigious 5-star hotel in Australia. My
+          passion for this industry lies in ensuring the utmost satisfaction of each client I serve.<br />However, my
+          true passion lies in leveraging the power of web services to make a significant impact on a larger scale. I
+          aspire to become a web developer, using my skills and expertise to create immersive online experiences that
+          delight and satisfy a vast number of clients across various devices.<br />To pursue my passion, I proactively
+          studied web development for two years before enrolling in The Coding Boot Camp at the University of Sydney.
+          This intensive program equipped me with comprehensive knowledge and practical skills, further strengthening my
+          foundation in web development.<br />I am now ready to embark on a new journey, combining my creative content
+          creation background, client-focused mindset, and technical expertise to build innovative and user-centric web
+          solutions. I am eagerly seeking opportunities where I can contribute my skills and passion to create
+          exceptional digital experiences for clients worldwide.
+          <br />Thank you.
+        </p>
       </div>
     </section>
     <section class="skills">
       <h2 id="web-skills">Web Skills</h2>
-      <div class="skills-container">
-        <div>
+      <ul class="skills-container">
+        <li>
           <h3>HTML5/CSS3</h3>
           <p class="skills-icon"><i class="far fa-file-code fa-3x"></i></p>
-          <p>I can do cording which is understandable and clearly. Further, I can create responsive web design for each
-            devices.</p>
-        </div>
-        <div>
+          <p>Proficient in writing clean, semantic HTML code. Experienced in creating visually appealing styles and
+            layouts using CSS3 techniques.</p>
+        </li>
+        <li>
           <h3>JavaScript/jQuery</h3>
           <p class="skills-icon"><i class="fab fa-js-square fa-3x"></i></p>
-          <p>I can do cording as event handling and animation for each by the type of website. Also I can touch to see
-            React.</p>
-        </div>
-        <div>
+          <p>Proficient in writing clean and efficient JavaScript code.Experienced in utilizing jQuery library for
+            simplified DOM manipulation.</p>
+        </li>
+        <li>
           <h3>WordPress/PHP</h3>
           <p class="skills-icon"><i class="fab fa-wordpress fa-3x"></i></p>
-          <p>I can create WordPress original theme. I have a knowledge about plugin and management.</p>
-        </div>
-      </div>
+          <p>Expertise in creating custom WordPress themes and creating the original templates with PHP.</p>
+        </li>
+        <li>
+          <h3>Node.js</h3>
+          <p class="skills-icon"><i class="fa-brands fa-node-js fa-3x"></i></p>
+          <p>Skilled in building server-side applications using Node.js and Express.js framework.</p>
+        </li>
+        <li>
+          <h3>MySQL/NoSQL</h3>
+          <p class="skills-icon"><i class="fa-solid fa-database fa-3x"></i></p>
+          <p> management using MySQL. Also, Familiar with NoSQL databases like MongoDB, capable of designing and
+            implementing efficient data models.</p>
+        </li>
+        <li>
+          <h3>React.js</h3>
+          <p class="skills-icon"><i class="fa-brands fa-react fa-3x"></i></p>
+          <p>Proficient in developing dynamic and interactive user interfaces using React.js and its ecosystem (React
+            Router, Redux, etc.).</p>
+        </li>
+      </ul>
     </section>
     <section class="works">
       <h2 id="works">Works</h2>
@@ -89,6 +117,13 @@
           <img src="img/ayakogoshima.jpeg" alt="an image of website AyakoGoshima" />
           <button>
             <a href="http://ayakogoshima.com/" target="_blank"><i class="fas fa-play"></i> Artist Website</a>
+          </button>
+        </li>
+        <li class="my-own-project">
+          <img src="img/CineFile.png" alt="an image of website CineFile" />
+          <button>
+            <a href="https://zeinahares.github.io/Group-Project-1-CineFile/" target="_blank"><i class="fas fa-play"></i>
+              CineFile </a>
           </button>
         </li>
         <li class="my-own-project">
