--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
     <section class="works">
       <h2 id="works">Works</h2>
       <ul class="works-container">
-        <li class="my-own-project">
+        <!-- <li class="my-own-project">
           <img src="img/ayakogoshima.jpeg" alt="an image of website AyakoGoshima" />
           <button>
-            <a href="http://ayakogoshima.com/" target="_blank"><i class="fas fa-play"></i> Artist Website</a>
+            <a href="https://ayakogoshima.com/" target="_blank"><i class="fas fa-play"></i> Artist Website</a>
           </button>
-        </li>
+        </li> -->
         <li class="my-own-project">
           <img src="img/CineFile.png" alt="an image of website CineFile" />
           <button>
@@ -131,6 +131,13 @@
           <button>
             <a href="https://sheltered-caverns-17258.herokuapp.com/" target="_blank"><i class="fas fa-play"></i> Travel
               companion </a>
+          </button>
+        </li>
+        <li class="my-own-project">
+          <img src="img/Qwizard.png" alt="an image of website Qwizard" />
+          <button>
+            <a href="https://qwizard-c649b0755527.herokuapp.com/" target="_blank"><i class="fas fa-play"></i> Qwizard
+            </a>
           </button>
         </li>
       </ul>
